tests/accept/provided/wSt_2.1_valid.ul
void main() {

}

int foo1(float bar1) {
    return 1;
}

int foo2(float bar2) {
    return 1;
}