tests/reject/bad_void_array.ul
void main() {
     void[100] x;
}